bedt gift section done

--- a/index.html
+++ b/index.html
@@ -93,9 +93,27 @@
                 <img class="img3" src="./resources/Rectangle 1.png" alt="">
             </div>
         </div>
-<div id="red"></div>
+        <div id="red"></div>
     </div>
-
+    <div id="best_gifts">
+        <div>
+            <h3><span>THE BEST GIFTS</span></h3>
+            <h1>Our Awesome Portfolio</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing <elit class=br></elit> reiciendis nihil natus ex
+                dolore, velit sit. <br> Adipisci minima excepturi fugiat nihil? Voluptates.</p>
+        </div>
+<div id="first_row">
+<div><img class="photo1" src="./resources/Rectangle 3.png" alt=""></div>
+<div><img class="photo2" src="./resources/Rectangle 4.png" alt=""></div>
+<div><img class="photo3" src="./resources/Rectangle 5.png" alt=""></div>
+</div>
+<div id="second_row">
+    <div ><img class="pic1" src="./resources/Rectangle 6.png" alt=""></div>
+    <div ><img class="pic2" src="./resources/Rectangle 7.png" alt=""></div>
+    <div ><img class="pic3" src="./resources/Rectangle 8.png" alt=""></div>
+   
+</div>
+    </div>
 
 </body>
 
