--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="resources/icons8-christmas-penguin-64.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
+<!-- banner section -->
 
 <body>
     <div class="banner">
@@ -17,6 +18,7 @@
             <h1>Celebration</h1>
         </div>
     </div>
+
     <!-- categories section -->
     <div class="categories">
         <h1 class="discount"><span>65% OFF</span></h1>
@@ -24,11 +26,11 @@
         <h1>ALL CATEGORIES</h1>
         <img src="resources/New Year Photo.png" alt="new year photo">
     </div>
+
     <!-- welcome to midnight section -->
     <div class="welcome_to_midnight">
         <div class="left">
             <h1 class="welcome">Welcome to <br>midnight party</h1>
-
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. <br> Soluta eaque possimus, eius voluptates ab
                 blanditiis at in neque nihil ea <br> laudantium aliquam asperiores, ullam adipisci quia. Maiores itaque
                 iusto
@@ -38,7 +40,6 @@
         <div class="right">
             <img src="resources/Group 70.png" alt="">
         </div>
-
     </div>
 
     <!-- place date time section -->
@@ -59,7 +60,6 @@
             <p>Lorem ipsum dolor sit amet consectetur, <br> adipisicing elit. Esse possimus non ea ab ipsa <br> rem
                 doloremque dolores magni, eius <br> debitis? Quod pariatur sit quas at in nemo eos quaerat. Earum.</p>
         </div>
-
         <div>
             <img class="round_picture" src="./resources/Ellipse 1.png" alt="">
         </div>
@@ -72,7 +72,7 @@
 
     </div>
 
-
+    <!-- holiday section -->
     <div class="holiday_details">
         <div class="holiday_sale">
             <h3>WHAT IS FUNCTIONAL</h3>
@@ -95,6 +95,8 @@
         </div>
         <div id="red"></div>
     </div>
+
+    <!-- best gift section -->
     <div id="best_gifts">
         <div>
             <h3><span>THE BEST GIFTS</span></h3>
@@ -102,19 +104,71 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing <elit class=br></elit> reiciendis nihil natus ex
                 dolore, velit sit. <br> Adipisci minima excepturi fugiat nihil? Voluptates.</p>
         </div>
-<div id="first_row">
-<div><img class="photo1" src="./resources/Rectangle 3.png" alt=""></div>
-<div><img class="photo2" src="./resources/Rectangle 4.png" alt=""></div>
-<div><img class="photo3" src="./resources/Rectangle 5.png" alt=""></div>
-</div>
-<div id="second_row">
-    <div ><img class="pic1" src="./resources/Rectangle 6.png" alt=""></div>
-    <div ><img class="pic2" src="./resources/Rectangle 7.png" alt=""></div>
-    <div ><img class="pic3" src="./resources/Rectangle 8.png" alt=""></div>
-   
-</div>
+        <div id="first_row">
+            <div><img class="photo1" src="./resources/Rectangle 3.png" alt=""></div>
+            <div><img class="photo2" src="./resources/Rectangle 4.png" alt=""></div>
+            <div><img class="photo3" src="./resources/Rectangle 5.png" alt=""></div>
+        </div>
+        <div id="second_row">
+            <div><img class="pic1" src="./resources/Rectangle 6.png" alt=""></div>
+            <div><img class="pic2" src="./resources/Rectangle 7.png" alt=""></div>
+            <div><img class="pic3" src="./resources/Rectangle 8.png" alt=""></div>
+        </div>
+    </div>
+
+    <!-- subscribe section -->
+    <div id="subscribe">
+        <img src="./resources/Group 61.png" alt="">
+        <h1>Subscribe Newsletter</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis possimus voluptas <br> quidem incidunt qui
+            inventore veniam dele fugiat iusto, veritatis numquam.</p>
+        <div class="input">
+            <div>
+                <input class="input_style" type="text" placeholder="user@gmail.com">
+
+            </div>
+            <div>
+                <button class="subscribe_button">Subscribe</button>
+
+            </div>
+        </div>
     </div>
 
 </body>
+<footer>
+    <div class="f_one">
+        <div>
+            <h3>44,Big Building Roosevelt Street <br> Beach Gardens Florida 44710</h3>
+        </div>
+        <div>
+            <h3>
+                + 00 123 567 124 <br> www.website.com
+            </h3>
+        </div>
+    </div>
+    <div class="f_two">
+        <div class="i_one">
+            <img src="./resources/Facebook.png" alt="">
+        </div>
+        <div class="i_two">
+            <img src="./resources/Instagram.png" alt="">
+        </div>
+        <div class="i_three">
+            <img src="./resources/Twitter.png" alt="">
+        </div>
+        <div class="i_four">
+            <img src="./resources/Linkedin.png" alt="">
+        </div>
+    </div>
+    <div class="f_three">
+<div>   
+         <h3>2017,AllRights Reserved.</h3>
+</div>  
+<div>
+    <h3>Unsubscribe</h3>
+
+</div>      
+    </div>
+</footer>
 
 </html>
